[gd_scene load_steps=20 format=2]

[ext_resource path="res://src/Buildings/Building.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/Buildings/Belt.gd" type="Script" id=2]
[ext_resource path="res://art/belt/sl.png" type="Texture" id=3]
[ext_resource path="res://art/belt/r.png" type="Texture" id=4]
[ext_resource path="res://art/belt/sr.png" type="Texture" id=5]
[ext_resource path="res://art/belt/lr.png" type="Texture" id=6]
[ext_resource path="res://art/belt/slr.png" type="Texture" id=7]
[ext_resource path="res://art/belt/l.png" type="Texture" id=8]
[ext_resource path="res://art/belt/s.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 17, 16 )

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 1.5 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "back"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 9 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "backleft"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "backleftright"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "backright"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "left"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 8 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "leftright"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "right"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}

[node name="Belt" instance=ExtResource( 1 )]
collision_layer = 16
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="." index="0"]
texture = ExtResource( 9 )

[node name="CollisionShape2D" parent="." index="1"]
shape = SubResource( 9 )

[node name="AreaTo" parent="." index="2"]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" parent="AreaTo" index="0"]
position = Vector2( 0, -19 )
shape = SubResource( 10 )

[node name="MoveTimer" type="Timer" parent="." index="3"]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 1 )
anims/back = SubResource( 2 )
anims/backleft = SubResource( 3 )
anims/backleftright = SubResource( 4 )
anims/backright = SubResource( 5 )
anims/left = SubResource( 6 )
anims/leftright = SubResource( 7 )
anims/right = SubResource( 8 )

[connection signal="area_entered" from="." to="." method="_on_Belt_area_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
